# DeepCMBsim

./: .gitignore  Example_creation_map.ipynb  LICENSE  Phi Maps.ipynb  README.md  Unlensed Maps.ipynb  Unlensed Temperature Maps.ipynb  camb_ps_maker.py  cmb_simulations.ipynb  conda-env.yml  flat_cmb_sims.py  flatmaps.py  kimmy_lensing_code.py  lens_and_apodize_maps.py  lensing_test_maps.py  make_lensed_maps.py  planck_2018_camb_spectra  planck_2018_camb_spectra.txt  pyproject.toml  setup.cfg  setup.py  sim_ranges.json  synalm_code.c  synfast_code.c  test_script.py  testing_code.py
.github/workflows/: test_push.yaml
CAMBPowerSpectrum/: __init__.py  camb_power_spectrum.py  params_io.py  yam_io.py
deepcmbsim/: __init__.py  camb_power_spectrum.py  cl_plotting.py  noise.py  params_io.py  simcmb.py
deepcmbsim/settings/: base_config.yaml  (+1 more)
inifiles/: planck_2018_1e4.ini
legacy/: Checkerboard Map.ipynb  Curved Maps.ipynb  Javier's Notebook.ipynb  Testing Neural Networks.ipynb  Unlensed Maps.ipynb  Unlensed Temperature Maps.ipynb  lens_and_apodize_maps.py  make_lensed_maps.py  test_script.py
notebooks/: Phi Maps.ipynb  T_Maps.ipynb  Unlensed Maps.ipynb  simcmb_example.ipynb
paper/: paper.bib  paper.md
simcmb/: __init__.py  camb_power_spectrum.py  camb_ps_maker.py  cl_plotting.py  clplotting.py  flat_cmb_sims.py  flatmaps.py  noise.py  params_io.py  planck_2018_1e4.yaml  plotting.py  simcmb.py  yam_in.py  yam_io.py
spectra/: planck_2018_1e4_camb_spectra
tests/: test_camb_ps_maker.py  test_clplotting.py  test_noise.py  test_script.py  test_yam_io.py
(+7 files in other folders)
