[tool.poetry]
name = "DeepCMBSim"
version = "0.1.0"
description = "fastsim code for CMB with lensing and noise"
authors = ["Samuel D. McDermott"]
license = "LICENSE.txt"

[tool.poetry.dependencies]
python = "^3.9"
camb = "^1.4.0"
h5py = "^3.8.0"
numpy = "^1.24.3"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"

pymaster = { version = "^1.5", optional = true }
[tool.poetry.extras]
pymaster = ["pymaster"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
