[metadata]
name = simcmb
version = 0.0
description = fastsim code for CMB with lensing and noise
license = LICENSE.txt
author = Samuel D. McDermott
author_email = samueldmcdermott@gmail.com
url = https://github.com/deepskies/simcmb


[options]
packages = find:
install_requires =
  camb
  pymaster
  astropy